version 10 - fermi - fixed modal scroll problem on smaller devices

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -178,3 +178,6 @@ a:hover
    
 .modal-header
   border-style: none
+
+.modal-body
+  overflow-y: auto
